@@ -6,6 +6,7 @@ Add Cairns Post, Geelong Advertiser & Townsville Bulletin (Australia News Corp)
 Add Arizent sites (opt-in to custom sites)
 Remove Puck.news (fix obsolete)
 Fix Adweek (premium)
+Fix ilMessaggero.it (+ regional sites)
 Fix Modern Healthcare (sponsored)
 Fix Sportico (amp)
 Update custom (flex) sites (no fix group)
